--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,17 @@
     </head>
     
     <body>
+
+      <!-- The core Firebase JS SDK is always required and must be listed first -->
+      <script src="/__/firebase/7.8.1/firebase-app.js"></script>
+
+      <!-- TODO: Add SDKs for Firebase products that you want to use
+          https://firebase.google.com/docs/web/setup#available-libraries -->
+      <script src="/__/firebase/7.8.1/firebase-analytics.js"></script>
+
+      <!-- Initialize Firebase -->
+      <script src="/__/firebase/init.js"></script>
+      
       <div class="container">
         <h1>Weather to CSV</h1>
         <h1>Welcome to My Awesome App</h1>
