--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
           <select id = "location">
             <option value="ohare">O'Hare</option>
             <option value="midway">Midway</option>
-            <option value="saratoga">Saratoga</option>
+            <option value="sarasota">Sarasota</option>
             <option value="tampa">Tampa</option>
           </select>
         </div>
@@ -108,11 +108,11 @@
               inpLong =-87.7521884;
               document.getElementById("testText").innerHTML= "Midway";
             }
-            else if(location.value.localeCompare("saratoga") == 0)
+            else if(location.value.localeCompare("sarasota") == 0)
             {
               inpLat = 27.341274;
               inpLong = -82.528267;
-              document.getElementById("testText").innerHTML= "Saratoga";
+              document.getElementById("testText").innerHTML= "Sarasota";
             }
             else if(location.value.localeCompare("tampa") == 0)
             {
