--- a/public/d3Test.html
+++ b/public/d3Test.html
@@ -123,27 +123,146 @@
 
 </style>
 <body>
+    <h1>Weather to CSV</h1>
+        <h1>Welcome to My Awesome App</h1>
+        <div id="firebaseui-auth-container"></div>
+        <div id="loader">Loading...</div>
+
+        <p>
+          How to use:<br>
+          1) Select a start date<br>
+          2) Select an end date<br>
+          3) Select a city<br>
+          4) Submit Request
+        </p>
+        <div id = "startDate">
+            <label for="start">Start date:</label>
+
+            <input type="date" id="start" name="trip-start">
+        </div>
+        <div id = "endDate">
+            <label for="end">End date:</label>
+
+            <input type="date" id="end" name="trip-start">
+        </div>
+        <!--
+        <div>
+            <a href="https://www.latlong.net/convert-address-to-lat-long.html">Get Coordinates here</a>
+        </div>
+      -->
+        <div>
+          <select id = "location">
+            <option value="ohare">O'Hare</option>
+            <option value="midway">Midway</option>
+            <option value="sarasota">Sarasota</option>
+            <option value="tampa">Tampa</option>
+          </select>
+        </div>
+        <div>
+          <p id = "testText">
+            value
+          </p>
+        </div>
+        <div>
+          <button id="submitButton" class="btn btn-primary" onclick="buttonPressed()">Submit</button>
+        </div>
 <div id="metric-modal"></div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js"></script>
 <script src="//d3js.org/d3.v3.min.js"></script>
 <script>
 
-// example data
-var metricName   = "views";
-var metricCount  = [1, 3, 1, 2, 1, 1, 1, 1, 2, 2, 3, 1, 2, 1, 4, 3, 2, 1, 1, 1, 1, 1, 4, 2, 1, 2, 8, 2, 1, 4, 2, 4, 1, 3, 1, 2, 1, 1, 3, 1, 1, 5, 1, 1, 4];
-var metricMonths = ["2018-06", "2013-04", "2015-11", "2012-10", "2014-09", "2014-02", "2016-02", "2016-04", "2016-06", "2014-12", "2013-07", "2017-01", "2015-10", "2012-12", "2013-05", "2018-04", "2015-06", "2017-03", "2014-08",
-                    "2017-07", "2013-02", "2012-07", "2016-03", "2017-06", "2018-07", "2014-10", "2013-01", "2013-10", "2017-11", "2014-05", "2012-11", "2015-01", "2018-03", "2015-12", "2015-08", "2016-08", "2014-11", "2014-01",
-                    "2013-06", "2012-08", "2015-09", "2016-07", "2013-03", "2012-09", "2016-05"];
-var optwidth        = 600;
-var optheight       = 370;
+    var metricName   = "Temperature";
+    var metricCount= [];//[1, 3, 1, 2, 1, 1, 1, 1, 2, 2, 3, 1, 2, 1, 4, 3, 2, 1, 1, 1, 1, 1, 4, 2, 1, 2, 8, 2, 1, 4, 2, 4, 1, 3, 1, 2, 1, 1, 3, 1, 1, 5, 1, 1, 4];
+    var metricMonths = [];//["2018-06", "2013-04", "2015-11", "2012-10", "2014-09", "2014-02", "2016-02", "2016-04", "2016-06", "2014-12", "2013-07", "2017-01", "2015-10", "2012-12", "2013-05", "2018-04", "2015-06", "2017-03", "2014-08",
+                        //"2017-07", "2013-02", "2012-07", "2016-03", "2017-06", "2018-07", "2014-10", "2013-01", "2013-10", "2017-11", "2014-05", "2012-11", "2015-01", "2018-03", "2015-12", "2015-08", "2016-08", "2014-11", "2014-01",
+                        //"2013-06", "2012-08", "2015-09", "2016-07", "2013-03", "2012-09", "2016-05"];
+    var optwidth        = 600;
+    var optheight       = 370;
 
+    downloadCSVFromJson = (filename, arrayOfJson) => {
+      // convert JSON to CSV
+      const replacer = (key, value) => value === null ? '' : value // specify how you want to handle null values here
+      const header = Object.keys(arrayOfJson[0])
+      let csv = arrayOfJson.map(row => header.map(fieldName => 
+      JSON.stringify(row[fieldName], replacer)).join(','))
+      csv.unshift(header.join(','))
+      csv = csv.join('\r\n')
 
-/*
-* ========================================================================
-*  Prepare data
-* ========================================================================
-*/
+      // Create link and download
+      var link = document.createElement('a');
+      link.setAttribute('href', 'data:text/csv;charset=utf-8,%EF%BB%BF' + encodeURIComponent(csv));
+      link.setAttribute('download', filename);
+      link.style.visibility = 'hidden';
+      document.body.appendChild(link);
+      link.click();
+      document.body.removeChild(link);
+    };
 
+    async function buttonPressed()
+    {
+      var location = document.getElementById("location");
+      var text = document.getElementById("testText");
+      var inpStart = document.getElementById("start").value;
+      var inpEnd = document.getElementById("end").value;
+      var inpLat;
+      var inpLong;
+      if (location.value.localeCompare("ohare") == 0)
+      {
+        inpLat = 41.977226;
+        inpLong = -87.904724;
+        document.getElementById("testText").innerHTML= "OHare";
+      }
+      else if(location.value.localeCompare("midway") == 0)
+      {
+        inpLat = 41.78677589;
+        inpLong =-87.7521884;
+        document.getElementById("testText").innerHTML= "Midway";
+      }
+      else if(location.value.localeCompare("sarasota") == 0)
+      {
+        inpLat = 27.341274;
+        inpLong = -82.528267;
+        document.getElementById("testText").innerHTML= "Sarasota";
+      }
+      else if(location.value.localeCompare("tampa") == 0)
+      {
+        inpLat = 27.964157;
+        inpLong = -82.452606;
+        document.getElementById("testText").innerHTML= "Tampa";
+      }
+      else
+      {
+        inpLat = 0;
+        inpLong = 0;
+        document.getElementById("testText").innerHTML=  "didn't work";
+      }
+
+      //response will store a JSON file
+      //const response = await fetch(`weather/${inpLat},${inpLong},${inpStart},${inpEnd}`);
+      const response = await fetch(`/weather?latitude=${inpLat}&longitude=${inpLong}&startDate=${inpStart}&endDate=${inpEnd}`);
+      const json = await response.json();
+      console.log(json);
+
+      this.downloadCSVFromJson('Weather.csv', json.dailyList);
+
+      var DataArray = json.dailyList.map(function(item) {
+        return Object.values(item);
+        });
+
+        console.log(DataArray);
+        for (let i=0; i <DataArray.length; i++)
+        {
+            date=DataArray[i][1];
+            let year = date.substring(date.length-4, date.length);
+            let month = date.substring(0, date.indexOf('/'));
+            let parsedMonth=year+'-'+month;
+            metricCount.push(DataArray[i][4]);
+            metricMonths.push(parsedMonth);
+        }
+        
+        console.log(metricCount);
+        console.log(metricMonths);
+        
 // Combine the months and count array to make "data"
 var dataset = [];
 for(var i=0; i<metricCount.length; i++){
@@ -674,6 +793,17 @@ function scaleDate(d,i) {
     // now fire the brushstart, brushmove, and brushend events
     brush.event(d3.select(".brush").transition());
 };
+    }
+
+// example data
+
+
+/*
+* ========================================================================
+*  Prepare data
+* ========================================================================
+*/
+
 
 </script>
 </body>
