--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
         </div>
         
         <div id = "keyInput">
-          <label for="">darkSky Key</label>
+          <label for="">DarkSky Key:</label>
 
           <input type="text" id="start" name="trip-start">
       </div>
